# goslims2gmt_using_ontology

./: .gitignore  associate_annotations_with_slims.py  create_gmt_file.py  create_go_slim_term_mappings.js  discrepancy_with_pombase.py  get_data.sh  missing_links.tsv  package-lock.json  package.json  pyproject.toml  readme.md  run_all.sh
